--- a/PrivacyPoilicy.html
+++ b/PrivacyPoilicy.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>Privacy Policy of Sandbox - FreePrivacyPolicy</title>
+<title>Privacy Policy of Sandbox - FreePrivacyPolicy Sample</title>
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
