--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,7 +1,7 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html>
 <head>
-<title>Privacy Policy of Sandbox - FreePrivacyPolicy Sample</title>
+<title>Privacy Policy of Sandbox - FreePrivacyPolicy</title>
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,11 +38,13 @@ ga('send', 'pageview');
 <body class="view-pages">
 <div id="wrap">
 
-    
     <div class="header">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-2">
+                    <img src="logo1-256.png" alt="Girl in a jacket" width="120" height="120">
+                </div>
+                <div class="col-md-4">
                     <h1>
                        Sandbox 
                     </h1>
